Latihan Membuat CV dengan HTML

--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
         <li>Pro Evolution Soccer</li>
     </ul>
 
+    <!-- Kontak -->
+    <h2>Kontak Saya</h2>
+    <ul type="square">
+        <li><a href="https://wa.me/6285591269241" target="display">WhatsApp</a></li>
+        <li><a href="https://www.facebook.com/alamanda.ardhana/" target="display">Facebook</a></li>
+        <li><a href="https://github.com/aaalamandaardana" target="display">GitHub</a></li>
+        <li><a href="https://www.instagram.com/alamandaardana/" target="display">Instagram</a></li>
+        <li><a href="https://www.linkedin.com/in/alamanda-ardana-51b278124/" target="display">LinkedIn</a></li>
+    </ul>
 </body>
 
 </html>
