--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <!-- Kontak -->
     <h2>Kontak Saya</h2>
-    <hr color="goldenrod" width="400px" align="left">
+    <hr color="goldenrod" width="400px" align="left"
     <ul type="square">
         <li><a href="https://wa.me/6285591269241" target="display">WhatsApp</a></li>
         <li><a href="https://www.facebook.com/alamanda.ardhana/" target="display">Facebook</a></li>
