Update "Kontak Saya"

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <h2>Kontak Saya</h2>
     <hr color="goldenrod" width="400px" align="left">
     <ul type="square">
+        <li><a href="mailto:ardana1920@gmail.com" target="display">Gmail</a></li>
         <li><a href="https://wa.me/6285591269241" target="display">WhatsApp</a></li>
         <li><a href="https://www.facebook.com/alamanda.ardhana/" target="display">Facebook</a></li>
         <li><a href="https://github.com/aaalamandaardana" target="display">GitHub</a></li>
