--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <p><strong>Asal</strong> &ensp; &ensp; &ensp; : &ensp; Depok</p>
     <p><strong>Usia</strong> &ensp; &ensp; &ensp; : &ensp; 20 Tahun</p>
     <p><strong>Telepon</strong> &ensp; : &ensp; (+62) 855-9126-9241</p>
+    <a href="mailto:ardana1920@gmail.com?subject=Tawaran Kerja Sama&body=Saya tertarik">Tawarkan Kerja Sama</a>
     <br>
 
     <!-- Education  -->
