--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <h1>CURRICULUM VITAE</h1>
     <!-- Bio -->
     <div class="bio">
-        <img src="image\arda.jpeg" alt="Foto Profil">
+        <img src="arda.jpeg" alt="Foto Profil">
         <p><b><i>“Bagi saya, setiap manusia (termasuk saya) lahir ke dunia tidak untuk makan dan minum saja, tetapi juga bertugas menebarkan manfaat untuk alam semesta."</i></b></p>
     </div>
     
